# picard-lite

./: .gitignore  LICENSE.md  NOTICE.md  README.md  picard-lite.cabal
src/Control/Monad/Yoctoparsec/: Class.hs
src/PicardLite/: Types.hs
src/PicardLite/Language/SQL/: SpiderSQL.hs
src/PicardLite/Language/SQL/SpiderSQL/: Lexer.hs  Parse.hs  Prelude.hs  Syntax.hs
tests/: Spec.hs
tests/PicardLite/Language/SQL/SpiderSQL/: Academic.hs  AssetsMaintenance.hs  Bike1.hs  Car1.hs  Chinook1.hs  ConcertSinger.hs  DepartmentManagement.hs  Flight1.hs  Geo.hs  Inn1.hs  MatchSeason.hs  Pets1.hs  PhoneMarket.hs  ProductCatalog.hs  Scholar.hs  StormRecord.hs  TestItem.hs
